@@ -31,22 +31,25 @@ namespace net
 	class ServerSocket::Private
 	{
 	public:
-		Private(ConnectionHandler* chandler) : sock(0),sn(0),chandler(chandler),dhandler(0)
+		Private(ConnectionHandler* chandler) : sock(0),rsn(0),wsn(0),chandler(chandler),dhandler(0)
 		{}
 		
-		Private(DataHandler* dhandler) : sock(0),sn(0),chandler(0),dhandler(dhandler)
+		Private(DataHandler* dhandler) : sock(0),rsn(0),wsn(0),chandler(0),dhandler(dhandler)
 		{}
 		
 		~Private()
 		{
-			delete sn;
+			delete rsn;
+			delete wsn;
 			delete sock;
 		}
 		
 		void reset()
 		{
-			delete sn;
-			sn = 0;
+			delete rsn;
+			rsn = 0;
+			delete wsn;
+			wsn = 0;
 			delete sock;
 			sock = 0;
 		}
@@ -54,7 +57,8 @@ namespace net
 		bool isTCP() const {return chandler != 0;}
 		
 		net::Socket* sock;
-		QSocketNotifier* sn;
+		QSocketNotifier* rsn;
+		QSocketNotifier* wsn;
 		ConnectionHandler* chandler;
 		DataHandler* dhandler;
 	};
@@ -76,22 +80,30 @@ namespace net
 	
 	bool ServerSocket::bind(const QString& ip, bt::Uint16 port)
 	{
+		return bind(net::Address(ip,port));
+	}
+	
+	bool ServerSocket::bind(const net::Address& addr)
+	{
 		d->reset();
 		
-		if (ip.contains(":")) // IPv6
-			d->sock = new net::Socket(d->isTCP(),6);
-		else
-			d->sock = new net::Socket(d->isTCP(),4);
-		
-		if (d->sock->bind(ip,port,d->isTCP()))
+		d->sock = new net::Socket(d->isTCP(),addr.ipVersion());
+		if (d->sock->bind(addr,d->isTCP()))
 		{
-			Out(SYS_GEN|LOG_NOTICE) << "Bound to " << ip << ":" << port << endl;
+			Out(SYS_GEN|LOG_NOTICE) << "Bound to " << addr.toString() << endl;
 			d->sock->setBlocking(false);
-			d->sn = new QSocketNotifier(d->sock->fd(),QSocketNotifier::Read,this);
+			d->rsn = new QSocketNotifier(d->sock->fd(),QSocketNotifier::Read,this);
 			if (d->isTCP())
-				connect(d->sn,SIGNAL(activated(int)),this,SLOT(readyToAccept(int)));
+			{
+				connect(d->rsn,SIGNAL(activated(int)),this,SLOT(readyToAccept(int)));
+			}
 			else
-				connect(d->sn,SIGNAL(activated(int)),this,SLOT(readyToRead(int)));
+			{
+				d->wsn = new QSocketNotifier(d->sock->fd(),QSocketNotifier::Write,this);
+				d->wsn->setEnabled(false);
+				connect(d->rsn,SIGNAL(activated(int)),this,SLOT(readyToRead(int)));
+				connect(d->wsn,SIGNAL(activated(int)),this,SLOT(readyToWrite(int)));
+			}
 			return true;
 		}
 		else
@@ -108,16 +120,33 @@ namespace net
 			d->chandler->newConnection(fd,addr);
 	}
 
-	void ServerSocket::readyToRead(int fd)
+	void ServerSocket::readyToRead(int)
 	{
 		net::Address addr;
-		QByteArray data(2048,0);
-		int ret = d->sock->recvFrom((bt::Uint8*)data.data(),data.size(),addr);
+		static bt::Uint8 tmp_buf[2048];
+		int ret = d->sock->recvFrom(tmp_buf,2048,addr);
 		if (ret > 0)
 		{
-			data.truncate(ret);
-			d->dhandler->dataReceived(data,addr);
+			d->dhandler->dataReceived(QByteArray::fromRawData((const char*)tmp_buf,ret),addr);
 		}
+	}
+	
+	void ServerSocket::setWriteNotificationsEnabled(bool on)
+	{
+		if (d->wsn)
+			d->wsn->setEnabled(on);
+	}
+	
+	void ServerSocket::setReadNotificationsEnabled(bool on)
+	{
+		if (d->rsn)
+			d->rsn->setEnabled(on);
+	}
+
+	
+	void ServerSocket::readyToWrite(int)
+	{
+		d->dhandler->readyToWrite(this);
 	}
 	
 	int ServerSocket::sendTo(const QByteArray& data, const net::Address& addr)
@@ -137,7 +166,14 @@ namespace net
 		
 		return d->sock->sendTo(buf,size,addr);
 	}
-
+	
+	bool ServerSocket::setTOS(unsigned char type_of_service)
+	{
+		if (d->sock)
+			return d->sock->setTOS(type_of_service);
+		else
+			return false;
+	}
 
 
 }
