@@ -5,11 +5,14 @@ Changes in 1.1:
 - Add support for superseeding (171661)
 - Add command line example ktcli showing how to use libktorrent
 - Add TransportProtocol field to Peer::Stats
+- Fix crash due to missing reset of Poll object in DHT listening thread (243603)
+- Ensure that libktorrent works properly with bindv6only flag on (238688)
 
 Changes in 1.0.2:
 - Fix subtle bug causing some connections to be dropped prematurely
 - Fix bug causing tracker replies with only IPv6 addresses to be misinterpreted as an invalid reply
 - Fix bug with sequence number wrapping around in µTP causing bad_alloc's (242042)
+- Fix deadlock in µTP code
 
 Changes in 1.0.1:
 - Make sure that KT binds correctly on systems with net.ipv6.bindv6only set to 1 (238688)
